--- a/todoapp/src/index.html
+++ b/todoapp/src/index.html
@@ -13,14 +13,8 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-success">
-    <!-- <app-root></app-root>  Klasik yöntem -->
-    <!-- <div class="app-root"></div>  Class ile -->
-    <!-- <div id="app-root"></div> -->
-
-    <p>app component paragraf</p>
-
-    <app></app>
+  <body>
+    <app-todo></app-todo>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
